--- a/hollysome/Commons/AlertContoller/AJAlertController.xib
+++ b/hollysome/Commons/AlertContoller/AJAlertController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -33,11 +33,8 @@
                             <rect key="frame" x="24" y="76.666666666666686" width="279" height="44"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ME3-b2-9TC">
-                                    <rect key="frame" x="0.0" y="1" width="131.66666666666666" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="131.66666666666666" height="44"/>
                                     <color key="backgroundColor" name="6E7583"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="44" id="JWu-96-dJ4"/>
-                                    </constraints>
                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                     <state key="normal" title="취소">
                                         <color key="titleColor" name="FFFFFF"/>
@@ -80,9 +77,10 @@
                                 <constraint firstItem="ME3-b2-9TC" firstAttribute="height" secondItem="cP5-QU-aBz" secondAttribute="height" id="90a-hn-lvn"/>
                                 <constraint firstAttribute="height" constant="44" id="HDL-m1-K3Y"/>
                                 <constraint firstItem="cP5-QU-aBz" firstAttribute="top" secondItem="42o-3E-8eX" secondAttribute="top" constant="1" id="HYP-or-aif"/>
+                                <constraint firstAttribute="bottom" secondItem="ME3-b2-9TC" secondAttribute="bottom" id="IqX-mi-6RX"/>
                                 <constraint firstItem="ME3-b2-9TC" firstAttribute="leading" secondItem="42o-3E-8eX" secondAttribute="leading" id="JTQ-NX-bJ7"/>
                                 <constraint firstAttribute="trailing" secondItem="cP5-QU-aBz" secondAttribute="trailing" id="Vxk-jH-DtE"/>
-                                <constraint firstItem="ME3-b2-9TC" firstAttribute="top" secondItem="42o-3E-8eX" secondAttribute="top" constant="1" id="c3u-6S-PDL"/>
+                                <constraint firstItem="ME3-b2-9TC" firstAttribute="top" secondItem="42o-3E-8eX" secondAttribute="top" id="c3u-6S-PDL"/>
                                 <constraint firstItem="Qac-Nk-Ysk" firstAttribute="leading" secondItem="42o-3E-8eX" secondAttribute="leading" id="c7O-r9-Ouh"/>
                                 <constraint firstAttribute="trailing" secondItem="Qac-Nk-Ysk" secondAttribute="trailing" id="hT0-Lc-wOM"/>
                                 <constraint firstItem="Qac-Nk-Ysk" firstAttribute="top" secondItem="42o-3E-8eX" secondAttribute="top" id="yg5-bI-YeN"/>
