--- a/hollysome/Resources/Login.storyboard
+++ b/hollysome/Resources/Login.storyboard
@@ -558,7 +558,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="38"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bRZ-gr-qCk">
-                                                <rect key="frame" x="0.0" y="0.0" width="194" height="38"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="216" height="38"/>
                                                 <inset key="contentEdgeInsets" minX="16" minY="0.0" maxX="16" maxY="0.0"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" image="btn_check_off">
@@ -651,7 +651,7 @@
                                         <rect key="frame" x="0.0" y="38" width="414" height="38"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jew-rt-Wth">
-                                                <rect key="frame" x="0.0" y="0.0" width="194" height="38"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="228" height="38"/>
                                                 <inset key="contentEdgeInsets" minX="16" minY="0.0" maxX="16" maxY="0.0"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" image="btn_check_off">
@@ -672,7 +672,7 @@
                                                         <fragment content="필수">
                                                             <attributes>
                                                                 <color key="NSColor" name="3A3A3C"/>
-                                                                <font key="NSFont" metaFont="system" size="14"/>
+                                                                <font key="NSFont" size="14" name=".AppleSDGothicNeoI-Regular"/>
                                                                 <font key="NSOriginalFont" metaFont="system" size="14"/>
                                                             </attributes>
                                                         </fragment>
@@ -689,10 +689,10 @@
                                                                 <font key="NSFont" metaFont="system" size="14"/>
                                                             </attributes>
                                                         </fragment>
-                                                        <fragment content="서비스">
+                                                        <fragment content="개인정보">
                                                             <attributes>
                                                                 <color key="NSColor" name="3A3A3C"/>
-                                                                <font key="NSFont" metaFont="system" size="14"/>
+                                                                <font key="NSFont" size="14" name=".AppleSDGothicNeoI-Regular"/>
                                                                 <font key="NSOriginalFont" metaFont="system" size="14"/>
                                                             </attributes>
                                                         </fragment>
@@ -702,10 +702,10 @@
                                                                 <font key="NSFont" metaFont="system" size="14"/>
                                                             </attributes>
                                                         </fragment>
-                                                        <fragment content="이용약관">
+                                                        <fragment content="취급방침">
                                                             <attributes>
                                                                 <color key="NSColor" name="3A3A3C"/>
-                                                                <font key="NSFont" metaFont="system" size="14"/>
+                                                                <font key="NSFont" size="14" name=".AppleSDGothicNeoI-Regular"/>
                                                                 <font key="NSOriginalFont" metaFont="system" size="14"/>
                                                             </attributes>
                                                         </fragment>
@@ -743,7 +743,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wBH-KA-xUt">
-                                <rect key="frame" x="0.0" y="616" width="154" height="40"/>
+                                <rect key="frame" x="0.0" y="596" width="176" height="60"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <inset key="contentEdgeInsets" minX="16" minY="10" maxX="16" maxY="10"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -1923,8 +1923,8 @@ email 로 보내 드렸습니다.
         </scene>
     </scenes>
     <resources>
-        <image name="btn_check_off" width="18" height="18"/>
-        <image name="btn_check_on" width="18" height="18"/>
+        <image name="btn_check_off" width="40" height="40"/>
+        <image name="btn_check_on" width="40" height="40"/>
         <image name="head_btn_back" width="11" height="20"/>
         <image name="head_btn_close" width="15.5" height="15.5"/>
         <image name="img_join" width="249" height="280"/>
