--- a/hollysome/Views/Home/HouseNoticeCell.xib
+++ b/hollysome/Views/Home/HouseNoticeCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HouseNoticeCell" rowHeight="259" id="tps-VW-YyS" customClass="HouseNoticeCell" customModule="hollysome" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="HouseNoticeCell" rowHeight="259" id="tps-VW-YyS" customClass="HouseNoticeCell" customModule="hollysome" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="393" height="259"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tps-VW-YyS" id="jjn-fu-afb">
