--- a/hollysome/Views/Schedule/AddScheduleCell.xib
+++ b/hollysome/Views/Schedule/AddScheduleCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AddScheduleCell" rowHeight="275" id="Wx9-b7-J5p" customClass="AddScheduleCell" customModule="hollysome" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AddScheduleCell" rowHeight="275" id="Wx9-b7-J5p" customClass="AddScheduleCell" customModule="hollysome" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="393" height="275"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Wx9-b7-J5p" id="Sn9-bb-euK">
