--- a/hollysome/Resources/My.storyboard
+++ b/hollysome/Resources/My.storyboard
@@ -473,7 +473,7 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="bOR-J6-EDV" secondAttribute="trailing" id="oAj-vL-IY2"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="MY" image="person.circle" catalog="system" id="tEi-CG-NaM">
+                    <tabBarItem key="tabBarItem" title="MY" image="tab4_off" selectedImage="tab4_on" id="tEi-CG-NaM">
                         <color key="badgeColor" name="accent"/>
                     </tabBarItem>
                     <navigationItem key="navigationItem" title="마이페이지" id="4VC-ZK-IFV"/>
@@ -1356,10 +1356,11 @@
         <image name="detail_arrow" width="16" height="16.333333969116211"/>
         <image name="head_btn_back" width="10.666666984558105" height="19.666666030883789"/>
         <image name="img_plus" width="35" height="35"/>
-        <image name="person.circle" catalog="system" width="128" height="123"/>
         <image name="radio_off 1" width="18" height="18"/>
         <image name="radio_on 1" width="18" height="18"/>
         <image name="state-kko" width="56" height="24"/>
+        <image name="tab4_off" width="24" height="24"/>
+        <image name="tab4_on" width="24" height="24"/>
         <namedColor name="3A3A3C">
             <color red="0.22699999809265137" green="0.22699999809265137" blue="0.23499999940395355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
@@ -1379,7 +1380,7 @@
             <color red="0.98000001907348633" green="0.98000001907348633" blue="0.98799997568130493" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="FFFCE0">
-            <color red="1" green="0.9882352941176471" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.98799997568130493" blue="0.87800002098083496" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="FFFFFF">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
