--- a/hollysome/Resources/Schedule.storyboard
+++ b/hollysome/Resources/Schedule.storyboard
@@ -33,7 +33,7 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Qir-Wl-I3d" secondAttribute="trailing" id="ypx-VB-ST7"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="일정" image="calendar" catalog="system" id="7Ul-gb-fRf">
+                    <tabBarItem key="tabBarItem" title="일정" image="tab2_off" selectedImage="tab2_on" id="7Ul-gb-fRf">
                         <color key="badgeColor" name="accent"/>
                     </tabBarItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
@@ -344,7 +344,11 @@
                                 <action selector="backButtonTouchedWithSender:" destination="Yt9-Kc-xHQ" id="5jf-ls-D5u"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" image="btn_delete" id="32d-0V-n70"/>
+                        <barButtonItem key="rightBarButtonItem" image="btn_delete" id="32d-0V-n70">
+                            <connections>
+                                <action selector="deleteBarButtonItemTouchedWithSender:" destination="Yt9-Kc-xHQ" id="QL7-1H-krm"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
@@ -353,6 +357,7 @@
                         <outlet property="enrollButton" destination="gkl-SO-LZj" id="4N0-FR-X7Z"/>
                         <outlet property="noTimeButton" destination="cY6-oW-iZT" id="IV7-sn-R44"/>
                         <outlet property="scheduleTableView" destination="YVN-HF-3oT" id="GAJ-oL-hKn"/>
+                        <outlet property="timeArrowImageView" destination="xCW-W8-X7F" id="aGX-QP-nDn"/>
                         <outlet property="timeTextField" destination="zC5-Ja-vsd" id="wzk-Vd-50j"/>
                         <outlet property="titleTextField" destination="rSm-0k-FdJ" id="LJP-eY-iaW"/>
                     </connections>
@@ -680,11 +685,12 @@
         <image name="btn_check_off" width="18" height="18"/>
         <image name="btn_check_on" width="18" height="18"/>
         <image name="btn_delete" width="55" height="23"/>
-        <image name="calendar" catalog="system" width="128" height="107"/>
         <image name="head_btn_back" width="10.666666984558105" height="19.666666030883789"/>
         <image name="next_btn" width="16" height="16"/>
         <image name="prev_btn" width="16" height="16"/>
         <image name="schedule_add" width="50" height="50"/>
+        <image name="tab2_off" width="24" height="24"/>
+        <image name="tab2_on" width="24" height="24"/>
         <namedColor name="3A3A3C">
             <color red="0.22699999809265137" green="0.22699999809265137" blue="0.23499999940395355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
