--- a/hollysome/Resources/Commons.storyboard
+++ b/hollysome/Resources/Commons.storyboard
@@ -303,7 +303,7 @@
             </objects>
             <point key="canvasLocation" x="1913" y="919"/>
         </scene>
-        <!--1:1 문의-->
+        <!--1:1 문의 상세-->
         <scene sceneID="Pc9-G7-xkI">
             <objects>
                 <viewController storyboardIdentifier="QnaDetailViewController" id="g8F-BJ-BYU" customClass="QnaDetailViewController" customModule="hollysome" customModuleProvider="target" sceneMemberID="viewController">
@@ -315,13 +315,13 @@
                                 <rect key="frame" x="0.0" y="103" width="393" height="715"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z0Y-Fq-FWS">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="370"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="418"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="vyU-RY-s6n">
-                                                <rect key="frame" x="0.0" y="0.0" width="393" height="370"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="vyU-RY-s6n">
+                                                <rect key="frame" x="16" y="16" width="361" height="402"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YCw-lr-lhG">
-                                                        <rect key="frame" x="0.0" y="0.0" width="393" height="165"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="361" height="165"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Q" translatesAutoresizingMaskIntoConstraints="NO" id="nDb-km-ilr">
                                                                 <rect key="frame" x="33" y="24" width="16" height="21"/>
@@ -331,7 +331,7 @@
                                                                 </constraints>
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="프로젝트 문의드립니다." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oPO-GD-v50">
-                                                                <rect key="frame" x="57" y="20" width="303" height="29.666666666666671"/>
+                                                                <rect key="frame" x="57" y="20" width="271" height="29.666666666666671"/>
                                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                                                 <color key="textColor" name="3A3A3C"/>
                                                                 <nil key="highlightedColor"/>
@@ -362,14 +362,14 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jxU-e1-AR6">
-                                                                <rect key="frame" x="16" y="97.666666666666657" width="361" height="1"/>
+                                                                <rect key="frame" x="16" y="97.666666666666657" width="329" height="1"/>
                                                                 <color key="backgroundColor" name="F1F1F4"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="1" id="WFZ-8V-Ogf"/>
                                                                 </constraints>
                                                             </view>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aVt-UN-B9P">
-                                                                <rect key="frame" x="33" y="114.66666666666666" width="327" height="20.333333333333343"/>
+                                                                <rect key="frame" x="33" y="114.66666666666666" width="295" height="20.333333333333343"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -396,7 +396,7 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UFK-3F-VGt">
-                                                        <rect key="frame" x="0.0" y="165" width="393" height="165"/>
+                                                        <rect key="frame" x="0.0" y="181" width="361" height="165"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="A" translatesAutoresizingMaskIntoConstraints="NO" id="6oK-Tf-tmv">
                                                                 <rect key="frame" x="33" y="24" width="16" height="21"/>
@@ -412,14 +412,14 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jk2-dl-K4Y">
-                                                                <rect key="frame" x="16" y="61" width="361" height="1"/>
+                                                                <rect key="frame" x="16" y="61" width="329" height="1"/>
                                                                 <color key="backgroundColor" name="F1F1F4"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="1" id="TS3-eK-HMG"/>
                                                                 </constraints>
                                                             </view>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ae-D7-RgO">
-                                                                <rect key="frame" x="33" y="78" width="327" height="57"/>
+                                                                <rect key="frame" x="33" y="78" width="295" height="57"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -441,8 +441,8 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mW5-W2-Vbc">
-                                                        <rect key="frame" x="0.0" y="330" width="393" height="40"/>
-                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <rect key="frame" x="0.0" y="362" width="361" height="40"/>
+                                                        <color key="backgroundColor" name="FAFAFC"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="40" id="d9k-Y8-4do"/>
                                                         </constraints>
@@ -450,15 +450,16 @@
                                                 </subviews>
                                             </stackView>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" name="FAFAFC"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="vyU-RY-s6n" secondAttribute="trailing" id="1je-5A-BKZ"/>
+                                            <constraint firstAttribute="trailing" secondItem="vyU-RY-s6n" secondAttribute="trailing" constant="16" id="1je-5A-BKZ"/>
                                             <constraint firstAttribute="bottom" secondItem="vyU-RY-s6n" secondAttribute="bottom" id="96F-bH-aEr"/>
-                                            <constraint firstItem="vyU-RY-s6n" firstAttribute="top" secondItem="z0Y-Fq-FWS" secondAttribute="top" id="EWQ-Tt-UyI"/>
-                                            <constraint firstItem="vyU-RY-s6n" firstAttribute="leading" secondItem="z0Y-Fq-FWS" secondAttribute="leading" id="rBw-qv-a8n"/>
+                                            <constraint firstItem="vyU-RY-s6n" firstAttribute="top" secondItem="z0Y-Fq-FWS" secondAttribute="top" constant="16" id="EWQ-Tt-UyI"/>
+                                            <constraint firstItem="vyU-RY-s6n" firstAttribute="leading" secondItem="z0Y-Fq-FWS" secondAttribute="leading" constant="16" id="rBw-qv-a8n"/>
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <color key="backgroundColor" name="FAFAFC"/>
                                 <constraints>
                                     <constraint firstItem="z0Y-Fq-FWS" firstAttribute="width" secondItem="8Yo-ge-tY1" secondAttribute="width" id="60N-SN-Usc"/>
                                     <constraint firstItem="z0Y-Fq-FWS" firstAttribute="trailing" secondItem="fMn-hW-jmi" secondAttribute="trailing" id="E2i-yw-D8g"/>
@@ -497,7 +498,7 @@
                             <constraint firstItem="1hY-JF-QQ5" firstAttribute="trailing" secondItem="hqo-lY-dfU" secondAttribute="trailing" id="wJH-2I-0XH"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="1:1 문의" id="hxN-I7-8nT">
+                    <navigationItem key="navigationItem" title="1:1 문의 상세" id="hxN-I7-8nT">
                         <barButtonItem key="leftBarButtonItem" image="head_btn_back" id="gnQ-E2-K4C">
                             <connections>
                                 <action selector="backButtonTouchedWithSender:" destination="g8F-BJ-BYU" id="0jl-te-GKc"/>
@@ -522,7 +523,7 @@
             </objects>
             <point key="canvasLocation" x="2999.2366412213737" y="916.90140845070425"/>
         </scene>
-        <!--1:1 문의-->
+        <!--1:1 문의 등록-->
         <scene sceneID="XTc-OW-jpk">
             <objects>
                 <viewController storyboardIdentifier="QnaRegistViewController" id="IBd-8Z-FQy" customClass="QnaRegistViewController" customModule="hollysome" customModuleProvider="target" sceneMemberID="viewController">
@@ -697,7 +698,7 @@
                             <constraint firstItem="Ll6-X5-mbT" firstAttribute="trailing" secondItem="Odp-Gs-d8m" secondAttribute="trailing" constant="16" id="z6F-oi-IS8"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="1:1 문의" id="u8B-f8-XIp">
+                    <navigationItem key="navigationItem" title="1:1 문의 등록" id="u8B-f8-XIp">
                         <barButtonItem key="leftBarButtonItem" image="head_btn_back" id="a7t-r4-arp">
                             <connections>
                                 <action selector="backButtonTouchedWithSender:" destination="IBd-8Z-FQy" id="6XG-uR-3tV"/>
@@ -1238,6 +1239,9 @@
         </namedColor>
         <namedColor name="F1F1F4">
             <color red="0.94499999284744263" green="0.94499999284744263" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="FAFAFC">
+            <color red="0.98000001907348633" green="0.98000001907348633" blue="0.98799997568130493" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="FFFFFF">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
